--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "installWebPackNpm": "npm i --save-dev webpack webpack-cli html-webpack-plugin html-loader mini-css-extract-plugin css-loader babel-loader @babel/preset-env",
     "installDevServerNpm": "npm i --save-dev webpack-dev-server",
     "installEslintNpm": "npm i --save-dev eslint eslint-plugin-import eslint-config-airbnb-base",
+    "installJestNpm": "npm i --save-dev jest @babel/core @babel/cli @babel/preset-env",
     "installWebpackYarn": "yarn add webpack webpack-cli html-webpack-plugin html-loader mini-css-extract-plugin css-loader babel-loader --dev",
     "installDevserverYarn": "yarn add webpack-dev-server --dev",
     "installJestYarn": "yarn add jest @babel/core @babel/cli @babel/preset-env --dev",
@@ -27,6 +28,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.22.6",
+    "@babel/core": "^7.22.8",
     "@babel/preset-env": "^7.22.7",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
@@ -35,6 +38,7 @@
     "eslint-plugin-import": "^2.27.5",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.6.1",
     "mini-css-extract-plugin": "^2.7.6",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4",
